src/tests/text_document/snapshots/texlab__tests__text_document__completion__acronym_ref_open_brace.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\newacronym[longplural={Frames per Second}]{fpsLabel}{FPS}{Frame per Second}\n%SRC \\acrshort{f\n%CUR           ^\n%1.1           ^\"#)?"
---
[
  {
    "kind": 1,
    "label": "fpsLabel",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "fpsLabel"
    }
  }
]
