src/tests/text_document/snapshots/texlab__tests__text_document__completion__argument_empty.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\usepackage{amsfonts}\n%SRC \\mathbb{}\n%CUR         ^\"#)?"
---
[
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "A",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "A"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "B",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "B"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "C",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "C"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "D",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "D"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "E",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "E"
    }
  }
]
