src/tests/text_document/snapshots/texlab__tests__text_document__completion__citation_open_brace_multiple.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\addbibresource{main.bib}\n%SRC \\cite{foo,a\n%CUR           ^\n%1.1           ^\n\n%BIB main.bib\n%SRC @article{foo,}\"#)?"
---
[
  {
    "data": "[data]",
    "filterText": "foo @article foo",
    "kind": 1,
    "label": "foo",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "foo"
    }
  }
]
